tests/typescript/pos/classes/class-07.ts
class A {

}

/*@ a :: #A */
var a : A = new A();

